<resources>
    <string name="app_name">Activities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added_activity">Activity was successfully added</string>
    <string name="error">%1$s</string>
    <string name="change_status_ongoing">Activity successfully changed to ongoing</string>
    <string name="deleted_activity">Activity has been deleted!</string>
    <string name="login">Login</string>
    <string name="change_activity_status_button">Change Activity Status</string>
    <string name="delete_activity_button">Delete activity</string>
    <string name="new_activity">New Activity</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="save">Save</string>
    <string name="empty_created_activities">There are no created activities...</string>
    <string name="created_activities">Created Activities</string>
    <string name="done_activities">Done Activities</string>
    <string name="empty_done_activities">There are no done activities...</string>
    <string name="edit_user">Edit User</string>
    <string name="name_hint">Name</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="edit_profile_button">Edit perfil</string>
    <string name="total_activities">Total Activities</string>
    <string name="total_of_created_activities">Total of created activities:</string>
    <string name="ongoing_activities">Ongoing activities</string>
    <string name="total_of_ongoing_activities">Total of ongoing activities:</string>
    <string name="total_of_done_activities">Total of done activities:</string>
    <string name="empty_ongoing_activities">There are no ongoing activities...</string>
    <string name="edit_profile_image">Edit profile image</string>
</resources>