<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_30sdp"
    android:paddingVertical="@dimen/_10sdp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.EditUserDialogFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_user"
        android:fontFamily="@font/myfont"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_user"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:shapeAppearanceOverlay="@style/Circular"
        android:tint="@color/dark_blue"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/btn_edit_image"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:srcCompat="@drawable/ic_edit_image"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_user"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:backgroundTint="#00000000"
        app:tint="#B7FFFFFF"
        android:contentDescription="@string/edit_profile_image" />


    <EditText
        android:id="@+id/edit_text_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="text"
        android:fontFamily="@font/myfont"
        android:hint="@string/name_hint"
        android:textColorHint="#90000000"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/image_view_user"
        app:layout_constraintStart_toStartOf="@+id/image_view_user"
        app:layout_constraintTop_toBottomOf="@+id/image_view_user"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/myfont"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user" />

</androidx.constraintlayout.widget.ConstraintLayout>