<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.HomeFragment">

    <ProgressBar
        android:id="@+id/progress_bar_home_fragment"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        android:indeterminateTint="@color/dark_blue"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/add_new_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/ic_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:backgroundTint="@color/white"
            app:cardElevation="@dimen/_5sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/image_view_edit"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_edit"
                    app:tint="@color/dark_blue"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/edit_profile_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin=".6dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/img_rounded_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/image_view_user"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        app:shapeAppearanceOverlay="@style/Circular"
                        app:srcCompat="@android:drawable/sym_def_app_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_view_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfont"
                    tools:text="Username"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/total_activities"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/text_view_number_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfont"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/activities_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/dark_blue"
                app:cardElevation="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin=".2dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/linearLayoutCreated"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/img_rounded_background"
                        android:backgroundTint="@color/dark_blue"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView8"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:shapeAppearanceOverlay="@style/Circular"
                            app:srcCompat="@drawable/ic_created" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:fontFamily="@font/myfont"
                        android:gravity="bottom"
                        android:text="@string/created_activities"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutCreated"
                        app:layout_constraintTop_toTopOf="@+id/linearLayoutCreated" />

                    <TextView
                        android:id="@+id/text_view_total_created_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:text="@string/total_of_created_activities"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutCreated"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/text_view_total_created_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view_total_created_text"
                        app:layout_constraintStart_toEndOf="@+id/text_view_total_created_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/orange"
                app:cardElevation="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin=".2dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/linearLayoutOngoing"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/img_rounded_background"
                        android:backgroundTint="@color/orange"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView7"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:shapeAppearanceOverlay="@style/Circular"
                            app:srcCompat="@drawable/ic_ongoing2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/myfont"
                        android:gravity="bottom"
                        android:text="@string/ongoing_activities"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutOngoing"
                        app:layout_constraintTop_toTopOf="@+id/linearLayoutOngoing" />

                    <TextView
                        android:id="@+id/text_view_total_ongoing_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_weight="1"
                        android:text="@string/total_of_ongoing_activities"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutOngoing"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/text_view_total_ongoing_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view_total_ongoing_text"
                        app:layout_constraintStart_toEndOf="@+id/text_view_total_ongoing_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/dark_green"
                app:cardElevation="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin=".2dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/linearLayoutDone"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/img_rounded_background"
                        android:backgroundTint="@color/dark_green"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView6"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:shapeAppearanceOverlay="@style/Circular"
                            app:srcCompat="@drawable/ic_done" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/myfont"
                        android:gravity="bottom"
                        android:text="@string/done_activities"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutDone"
                        app:layout_constraintTop_toTopOf="@+id/linearLayoutDone" />

                    <TextView
                        android:id="@+id/text_view_total_done_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_weight="1"
                        android:text="@string/total_of_done_activities"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/linearLayoutDone"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/text_view_total_done_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view_total_done_text"
                        app:layout_constraintStart_toEndOf="@+id/text_view_total_done_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>